configure_file(${CMAKE_CURRENT_SOURCE_DIR}/CharCursorTestFile.txt ${CMAKE_CURRENT_BINARY_DIR}/CharCursorTestFile.txt COPYONLY)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/CharCursorTestEmptyFile.txt ${CMAKE_CURRENT_BINARY_DIR}/CharCursorTestEmptyFile.txt COPYONLY)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/CharCursorTestSingleCharFile.txt ${CMAKE_CURRENT_BINARY_DIR}/CharCursorTestSingleCharFile.txt COPYONLY)
add_executable(Tests_run TestMain.cpp FieldDescriptorTests.cpp MessageDescriptorTests.cpp SourceDescriptorTests.cpp TokenTests.cpp CharCursorTests.cpp ErrorReporterTests.cpp LexerTests.cpp DocCommentContext.cpp MessageDeclarationTests.cpp DirectiveDeclarationTests.cpp ParserTestHelpers.h ServiceDeclarationTests.cpp ParserTests.cpp ASTTests.cpp ScalarTypeDefTests.cpp FieldTests.cpp MessageTypeDefTests.cpp MapTypeDefTests.cpp ListTypeDefTests.cpp ArgumentTests.cpp CallTests.cpp)
target_link_libraries(Tests_run tell)